--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,6 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block content %}{% endblock %}
     </body>
 </html>
