--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,13 +17,16 @@
             <div class="container-fluid">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link 1</a>
+                        <a class="nav-link" href="{{ path("app_homepage") }}"><i class="fa-solid fa-house fa-lg"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link 2</a>
+                        <a class="nav-link" href="{{ path("app_about")  }}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link 3</a>
+                        <a class="nav-link" href="{{ path("app_giveaways") }}">Giveaways</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path("app_login") }}">Login</a>
                     </li>
                 </ul>
             </div>
