--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,24 +13,39 @@
         {% endblock %}
     </head>
     <body>
-        <nav class="navbar navbar-expand-sm bg-light">
-            <div class="container-fluid">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path("app_homepage") }}"><i class="fa-solid fa-house fa-lg"></i></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path("app_about")  }}">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path("app_giveaways") }}">Giveaways</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path("app_login") }}">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div name="navbar">
+            <nav class="navbar navbar-expand-sm bg-light">
+                <div class="container-fluid">
+                    <ul class="navbar-nav">
+                        <li class="nav-item me-2">
+                            <a class="nav-link" href="{{ path("app_homepage") }}"><i class="fa-solid fa-house fa-lg"></i></a>
+                        </li>
+                        <li class="nav-item me-2">
+                            <a class="nav-link" href="{{ path("app_about")  }}">About</a>
+                        </li>
+                        <li class="nav-item me-2">
+                            <a class="nav-link" href="{{ path("app_giveaways") }}">Giveaways</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path("app_login") }}">Login</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
         {% block content %}{% endblock %}
+        <div name="footer">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+                <p class="col-md-4 mb-0 text-muted">&copy; 2023 Justin Fernandez</p>
+
+                <ul class="nav col-md-4 justify-content-end">
+                    <li class="nav-item"><a href="{{ path("app_homepage") }}" class="nav-link px-2 text-muted">Home</a></li>
+                    <li class="nav-item"><a href="{{ path("app_about") }}" class="nav-link px-2 text-muted">About</a></li>
+                    <li class="nav-item"><a href="{{ path("app_giveaways") }}" class="nav-link px-2 text-muted">Giveaways</a></li>
+                    <li class="nav-item"><a href="{{ path("app_login") }}" class="nav-link px-2 text-muted">Login</a></li>
+                    <li class="nav-item"><a href="https://github.com/TJmatrix0/php-webdev" class="nav-link px-2 text-muted" target="_blank">Github <i class="fa-brands fa-github"></i></a></li>
+                </ul>
+            </footer>
+        </div>
     </body>
 </html>
