Wrapped Content in Container

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         {% endblock %}
     </head>
     <body>
-        <div name="navbar">
+        <div class="container" name="navbar">
             <nav class="navbar navbar-expand-sm bg-light">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
@@ -34,7 +34,7 @@
             </nav>
         </div>
         {% block content %}{% endblock %}
-        <div name="footer">
+        <div class="container" name="footer">
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <p class="col-md-4 mb-0 text-muted">&copy; 2023 Justin Fernandez</p>
 
