--- a/templates/matrix/giveaways.html.twig
+++ b/templates/matrix/giveaways.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-    <h1>{{ title }}</h1>
+    <div class="container">
+        <h1>{{ title }}</h1>
+    </div>
 {% endblock %}
