--- a/templates/matrix/homePage.html.twig
+++ b/templates/matrix/homePage.html.twig
@@ -1,6 +1,8 @@
 {% extends "base.html.twig" %}
 
 {% block content %}
-    <h1>{{ title }}</h1>
-    <i class="fa-solid fa-code"></i>
+    <div class="container">
+        <h1>{{ title }}</h1>
+        <i class="fa-solid fa-code"></i>
+    </div>
 {% endblock %}
