--- a/templates/matrix/login.html.twig
+++ b/templates/matrix/login.html.twig
@@ -7,7 +7,7 @@
         <form>
             <div class="form-group">
                 <label for="userNameInput">Username</label>
-                <input type="email" class="form-control w-25" id="userNameInput" placeholder="Enter username">
+                <input type="text" class="form-control w-25" id="userNameInput" placeholder="Enter username">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
