Basic Giveaway Page Layout & Design

--- a/templates/matrix/homePage.html.twig
+++ b/templates/matrix/homePage.html.twig
@@ -2,6 +2,24 @@
 
 {% block content %}
     <div class="container">
-        <h1>{{ title }}</h1>
+        <h1>{{ header }}</h1>
+        <div class="row">
+            <div class="col card">
+                <iframe height="350px" class="mt-2" src="https://www.youtube.com/embed/agPlkgS9Asg" title="YouTube video player: Remnant 2" frameborder="0" allowfullscreen></iframe>
+                <div class="card-body">
+                    <h4>Remnant 2</h4>
+                    <p>Sequel to the best-selling game Remnant: From the Ashes!</p>
+                    <a href="https://www.remnantgame.com/en/" target="_blank" class="btn btn-primary">Visit Their Site!</a>
+                </div>
+            </div>
+            <div class="col card"> 
+                <iframe height="350px" class="mt-2" src="https://www.youtube.com/embed/kfYEiTdsyas" title="YouTube video player: Starfield" frameborder="0" allowfullscreen></iframe>
+                <div class="card-body">
+                    <h4>Starfield</h4>
+                    <p>From the makers of The Elder Scrolls: Skyrim & Fallout 4!</p>
+                    <a href="https://bethesda.net/en/game/starfield" target="_blank" class="btn btn-primary">Check It Out Here!</a>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
