--- a/templates/matrix/about.html.twig
+++ b/templates/matrix/about.html.twig
@@ -2,6 +2,6 @@
 
 {% block content%}
     <div class="container">
-        <h1>{{ title }}</h1>
+        <h1>{{ header }}</h1>
     </div>
 {% endblock %}
