--- a/templates/matrix/giveaways.html.twig
+++ b/templates/matrix/giveaways.html.twig
@@ -2,6 +2,29 @@
 
 {% block content %}
     <div class="container">
-        <h1>{{ title }}</h1>
+        <h1>{{ header }}</h1>
+        <div class="row">
+            <div class="col card m-3">
+                <img height="256px" width="256px" class="mx-auto" src="images/gamepad-cross.png"></img>
+                <div class="card-body border-top border-white" >
+                    <h4>Blue Button Games</h4>
+                    <p>Claim key!</p>
+                </div>
+            </div>
+            <div class="col card m-3">
+                <img height="256px" width="256px" class="mx-auto" src="images/retro-controller.png"></img>
+                <div class="card-body border-top border-white">
+                    <h4>Retro Red Game Company</h4>
+                    <p>Claim key!</p>
+                </div>
+            </div>
+            <div class="col card m-3">
+                <img height="256px" width="256px" class="mx-auto" src="images/gamepad.png"></img>
+                <div class="card-body border-top border-white">
+                    <h4>Green Gamepad Gaming</h4>
+                    <p>Enter our giveaway!</p>
+                </div>
+            </div>
+        </div>
     </div>
 {% endblock %}
