--- a/templates/matrix/giveaways.html.twig
+++ b/templates/matrix/giveaways.html.twig
@@ -8,14 +8,20 @@
                 <img height="256px" width="256px" class="mx-auto" src="images/gamepad-cross.png"></img>
                 <div class="card-body border-top border-white" >
                     <h4>Blue Button Games</h4>
-                    <p>Claim key!</p>
+                    <p>Claim Key!</p>
+                    <div class="progress">
+                        <div class="progress-bar" style="width:14%"></div>
+                    </div>
                 </div>
             </div>
             <div class="col card m-3">
                 <img height="256px" width="256px" class="mx-auto" src="images/retro-controller.png"></img>
                 <div class="card-body border-top border-white">
                     <h4>Retro Red Game Company</h4>
-                    <p>Claim key!</p>
+                    <p>Ran out of keys!</p>
+                    <div class="progress">
+                        <div class="progress-bar" style="width:0%"></div>
+                    </div>
                 </div>
             </div>
             <div class="col card m-3">
@@ -23,8 +29,21 @@
                 <div class="card-body border-top border-white">
                     <h4>Green Gamepad Gaming</h4>
                     <p>Enter our giveaway!</p>
+                    <div class="progress">
+                        <div class="progress-bar" style="width:80%"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
 {% endblock %}
+
+
+
+
+
+
+
+
+
