About Page Finished

--- a/templates/matrix/about.html.twig
+++ b/templates/matrix/about.html.twig
@@ -3,5 +3,12 @@
 {% block content%}
     <div class="container">
         <h1>{{ header }}</h1>
+
+        <p>The main technology stack for this website was: PHP, HTML, CSS, JS, Symfony, and Twig.</p>
+        <p>Technologies such as WebPack, Composer, yarn, Bootstrap 5, and FontAwesome-Free were also used.</p>
+        <p>The icons used in the "giveaways" page are from <a href="https://game-icons.net" target="_blank">game-icons.net</a> and are licensed under the <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank">CC BY 3.0 License</a> with their colors modified through the game-icons.net Studio feature when clicking on an icon.
+
+        <p>This website is a quick front-end mock-up with a "Login" page and JSON API REST GET endpoint to build upon back-end functionality at a later date.</p>
+        <p>View the source code for the website and read the README for more in-depth explanations at the project's <a href="https://github.com/TJmatrix0/php-webdev" target="_blank">Github</a>.
     </div>
 {% endblock %}
